Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26668

Qt5 qdbusxml2cpp appears broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.2.0 Alpha
    • 5.0.0 Beta 1
    • D-Bus
    • None
    • Linux. Thiago Macieira said he could reproduce this.
    • bdfbc9e493b4df7da89fb62222dc7cb283b3794a

      In the Qt5 alpha and latest beta candidate version qdbusxml2cpp is broken. It does not generate the DBus introspection string that goes into the adaptor header file.

      In the header file the Q_CLASSINFO("D-Bus Intropection", "", "introspection_information")

      macro included in the class is empty where "introspection_information" is located. Using the Qt4 version of qdbusxml2cpp works.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            dougmiller Douglas K. Miller
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes